adding form to index.html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <section>
         <form action="" id="searchingForm">
-            <input type="text">
-            <button></button>
+            <input type="text" id="#movie-name" value="">
+            <input type="button" id="#search-button" value="Submit"/>
         </form>
 
     </section>
