linking javascript file

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <section>
         <form action="" id="searchingForm">
-            <input type="text" id="#movie-name" value="">
-            <input type="button" id="#search-button" value="Submit"/>
+            <input type="text" id="movie-name" value="">
+            <input type="button" id="search-button" value="Submit"/>
         </form>
 
     </section>
@@ -22,6 +22,8 @@
     <footer>
 
     </footer>
+
+    <script src="script.js"></script>
     
 </body>
 </html>
