--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="script.js" defer></script>
     <title>Movie Finder App</title>
 </head>
 <body>
@@ -13,8 +14,8 @@
     
     <section>
         <form action="" id="searchingForm">
-            <input type="text" id="#movie-name" value="">
-            <input type="button" id="#search-button" value="Submit"/>
+            <input type="text" id="movie-name" value="">
+            <input type="button" id="search-button" value="Submit"/>
         </form>
 
     </section>
@@ -22,6 +23,5 @@
     <footer>
 
     </footer>
-    
 </body>
 </html>
